--- a/lesson12/index.html
+++ b/lesson12/index.html
@@ -36,6 +36,10 @@
             that takes place on the Island of Cozumel. These rentals will help individuals to be able to visit the
             touristy western part of the Island, with easy access to different areas when they rent with us at Scoots.
         </p>
+        <br>
+        <h2>Domain</h2>
+        <p>scootcozumel.com</p>
+        <br>
         <h2>Scoots Logo</h2>
         <img src="images/FinalLogoScoots.png" alt="Scoots Logo">
         <h3>Logo PNG Credit:</h3>
