--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -30,7 +30,7 @@
         </nav>
     </header>
     <main>
-        <h2 class="welcome">Welcome to Scoots!</h2>
+        <h2 class="welcome">Rentals</h2>
         <div class="herodiv">
             <img src="images/homepagebanner.jpg" alt="banner img" class="banner-image">
         </div>
@@ -43,8 +43,8 @@
                 efficiendi in eos. Ei mea falli legere efficiantur et tollit aliquip debitis mei. No deserunt
                 mediocritatem mel. Lorem ipsum dolor sit amet et delectus</p>
         </div>
-        <div class="reservebutton">
-            <a href='https://sommerl.github.io/scoots/rentals'><button>Click to make a Reservation</button></a>
+        <div>
+            <a href='https://sommerl.github.io/scoots/rentals'><button>Link To freeCodeCamp</button></a>
 
         </div>
         <div>
