--- a/scoots/home.html
+++ b/scoots/home.html
@@ -43,12 +43,43 @@
                 efficiendi in eos. Ei mea falli legere efficiantur et tollit aliquip debitis mei. No deserunt
                 mediocritatem mel. Lorem ipsum dolor sit amet et delectus</p>
         </div>
+        <br>
         <div class="reservebutton">
-            <a href='https://sommerl.github.io/scoots/rentals'><button>Click to make a Reservation</button></a>
-
+            <a href='https://sommerl.github.io/scoots/rentals'><button>Click here to make a Reservation</button></a>
         </div>
-        <div>
-            <img src="" alt="">
+        <br><br><br><br>
+            <section class="weathersummary">
+                <h3>Cozumel Weather Summary:</h3>
+                <p>Current Temp: <span id="current-temp"></span>&deg; F</p>
+                <p>Current: <span id="current"></span></p>
+                <p>High: <span id="high-temp"></span>&deg; F</p>
+                <p>Humidity: <span id="humidity"></span>%</p>
+            </section>
+            <br><br>
+            <div class="weatherhead">
+                <h3>3 Day Weather Forecast</h3>
+            </div>
+            <div class="forecast">
+                <ul id="three-day-forecast" class="center"></ul>
+            </div>
+            <br><br>
+            <div class="contact">
+                <h3>Contact Info:</h3>
+                <p>
+                    Email: scootcozumel@gmail.com<br>
+                    Phone: (343) 786-9087<br>
+                    Address: San Miguel de Cozumel, Quintana Roo, Mexico
+                </p>
+            </div>
+            <br><br>
+        <div class="social">
+            <h3>Follow Us on Social Media:</h3>
+            <a href="https://www.facebook.com/" target="_blank"><img src="images/facebooksocial.png"
+                    alt="Facebook logo"></a>
+            <a href="https://www.twitter.com/" target="_blank"><img src="images/twittersocial.png"
+                    alt="Twitter icon"></a>
+            <a href="https://www.instagram.com/" target="_blank"><img src="images/instagramsocial.png"
+                    alt="Instagram icon"></a>
         </div>
     </main>
     <footer>
@@ -60,6 +91,7 @@
         <span id="lastupdated"></span>
     </footer>
     <script src="js/file.js"></script>
+    <script src="js/weather.js"></script>
 </body>
 
 </html>
