--- a/scoots/home.html
+++ b/scoots/home.html
@@ -36,12 +36,15 @@
         </div>
         <div class="rentaltype">
             <h2>Types of Rentals</h2>
-            <p>Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix ad putent delectus
-                delicata usu. Vidit dissentiet eos cu eum an brute copiosae hendrerit. Eos erant dolorum an. Per facer
-                affert ut. Mei iisque mentitum moderatius cu. Sit munere facilis accusam eu dicat falli consulatu at
-                vis. Te facilisis mnesarchum qui posse omnium mediocritatem est cu. Modus argumentum ne qui tation
-                efficiendi in eos. Ei mea falli legere efficiantur et tollit aliquip debitis mei. No deserunt
-                mediocritatem mel. Lorem ipsum dolor sit amet et delectus</p>
+            <h3>•Honda Motor Scooters•</h3>
+            <p>- Honda Metropolitan (49cc) - 1 person</p>
+            <p>- Honda Dio (110cc) - 2 person</p>
+            <p>- Honda PCX150 (149cc) - 2 person</p>
+            <h3>•ATV Side-by-Side•</h3>
+            <p>- Honda Pioneer 1000</p>
+            <h3>•Jeep Rentals•</h3>
+            <p>- 4-door Jeep Wrangler - manual with A/C - 5 people max</p>
+            <p>- 2-door Jeep Wrangler - open air - manual - 4 people max</p>
         </div>
         <br>
         <div class="reservebutton">
@@ -56,15 +59,14 @@
                 <p>Humidity: <span id="humidity"></span>%</p>
             </section>
             <br><br>
-            <div class="weatherhead">
-                <h3>3 Day Weather Forecast</h3>
-            </div>
             <div class="forecast">
+                <h3>3 Day Weather Forecast</h3>
                 <ul id="three-day-forecast" class="center"></ul>
             </div>
             <br><br>
             <div class="contact">
                 <h3>Contact Info:</h3>
+                <img src="images/resort.jpg" alt="resort img" class="resort-image">
                 <p>
                     Email: scootcozumel@gmail.com<br>
                     Phone: (343) 786-9087<br>
