--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -32,21 +32,12 @@
     <main>
         <h2 class="welcome">Rentals</h2>
         <div class="herodiv">
-            <img src="images/homepagebanner.jpg" alt="banner img" class="banner-image">
+            <img src="images/rentalsbanner.jpg" alt="banner img" class="rental-image">
         </div>
         <div class="rentaltype">
             <h2>Types of Rentals</h2>
-            <p>Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix ad putent delectus
-                delicata usu. Vidit dissentiet eos cu eum an brute copiosae hendrerit. Eos erant dolorum an. Per facer
-                affert ut. Mei iisque mentitum moderatius cu. Sit munere facilis accusam eu dicat falli consulatu at
-                vis. Te facilisis mnesarchum qui posse omnium mediocritatem est cu. Modus argumentum ne qui tation
-                efficiendi in eos. Ei mea falli legere efficiantur et tollit aliquip debitis mei. No deserunt
-                mediocritatem mel. Lorem ipsum dolor sit amet et delectus</p>
         </div>
-        <div>
-            <a href='https://sommerl.github.io/scoots/rentals'><button>Link To freeCodeCamp</button></a>
-
-        </div>
+        <div class="table"></div>
         <div>
             <img src="" alt="">
         </div>
@@ -60,6 +51,7 @@
         <span id="lastupdated"></span>
     </footer>
     <script src="js/file.js"></script>
+    <script src="data/rentals.json"></script>
 </body>
 
 </html>
