--- a/scoots/home.html
+++ b/scoots/home.html
@@ -21,7 +21,7 @@
         <nav class="clearfix">
             <button onclick="toggleMenu()">&#9776; Menu</button>
             <ul id="mainNav">
-                <li><a href="https://sommerl.github.io/scoots/home">Home</a></li>
+                <li class="active"><a href="https://sommerl.github.io/scoots/home">Home</a></li>
                 <li><a href="https://sommerl.github.io/scoots/rentals">Rentals</a></li>
                 <li><a href="https://sommerl.github.io/scoots/reservation">Reservations</a></li>
                 <li><a href="">Tours</a></li>
