--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -22,7 +22,7 @@
             <button onclick="toggleMenu()">&#9776; Menu</button>
             <ul id="mainNav">
                 <li><a href="https://sommerl.github.io/scoots/home">Home</a></li>
-                <li><a href="https://sommerl.github.io/scoots/rentals">Rentals</a></li>
+                <li class="active"><a href="https://sommerl.github.io/scoots/rentals">Rentals</a></li>
                 <li><a href="https://sommerl.github.io/scoots/reservation">Reservations</a></li>
                 <li><a href="">Tours</a></li>
                 <li><a href="">Contact</a></li>
