--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Scoots Site Plan</title>
+    <title>Rentals</title>
     <meta name="description" content="My Weather Site">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css">
