--- a/scoots/reservation.html
+++ b/scoots/reservation.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Storm Center</title>
+        <title>Reservations</title>
         <meta name="description" content="My Weather Site">
         <link rel="shortcut icon" href="favicon.ico">
         <link rel="stylesheet" href="css/normalize.css">
