--- a/scoots/deposit.html
+++ b/scoots/deposit.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Rentals</title>
+    <title>Reservation</title>
     <meta name="description" content="Scoots">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css">
@@ -21,8 +21,8 @@
         <nav class="clearfix">
             <button onclick="toggleMenu()">&#9776; Menu</button>
             <ul id="mainNav">
-                <li><a href="https://sommerl.github.io/scoots/home">Home</a></li>
-                <li class="active"><a href="https://sommerl.github.io/scoots/rentals">Rentals</a></li>
+                <li class="active"><a href="https://sommerl.github.io/scoots/home">Home</a></li>
+                <li><a href="https://sommerl.github.io/scoots/rentals">Rentals</a></li>
                 <li><a href="https://sommerl.github.io/scoots/reservation">Reservations</a></li>
                 <li><a href="">Tours</a></li>
                 <li><a href="">Contact</a></li>
@@ -30,28 +30,8 @@
         </nav>
     </header>
     <main>
-        <h2 class="welcome">Rentals</h2>
-        <div class="herodiv">
-            <img src="images/rentalsbanner.jpg" alt="banner img" class="rental-image">
-        </div>
-        <div class="rentaltype">
-            <h2>Types of Rentals</h2>
-        </div>
-        <div class="table"></div>
-        <div>
-            <img src="" alt="">
-        </div>
-    </main>
-    <footer>
-        <span>
-            &copy; <span id="year"></span> | Motor Scooter Rentals | Cozumel, Mexico | <a
-                href="https://www.scootcozumel.com" target="_blank">Scoots</a>
-        </span>
-        <br>
-        <span id="lastupdated"></span>
-    </footer>
-    <script src="js/file.js"></script>
-    <script src="data/rentals.json"></script>
+        <h1>Reservation Confirmation</h1>
+            <p>Thank you for submitting your Storm Report. Someone will be in contact with you as soon as possible.</p>
+        </main>  
 </body>
-
 </html>
