--- a/scoots/deposit.html
+++ b/scoots/deposit.html
@@ -30,8 +30,39 @@
         </nav>
     </header>
     <main>
-        <h1>Reservation Confirmation</h1>
-            <p>Thank you for submitting your Storm Report. Someone will be in contact with you as soon as possible.</p>
-        </main>  
+        <div class="formresponse">
+            <h1>Reservation Confirmation</h1>
+            <p>Thank you for submitting your Reservation. Please review your Reservation below. If the information is
+                correct please fill out the form below to pay the deposit and complete your reservation. Thank
+                you!
+            </p>
+        </div>
+        <form>
+            <h1 class="deposithead">Make Deposit and Complete Reservation</h1>
+            <fieldset>
+                <legend>Payment</legend>
+            <label class="sbs">Payment Type:
+                <select name="rentaltype">
+                    <option value="0">Please Select</option>
+                    <option value="1">Debit</option>
+                    <option value="2">Credit</option>
+                </select>
+                </label>
+                <label class="top">Name on Card: <input type="text" name="name" required></label>
+                <label class="top">Card Number: <input type="text" name="cnumber" required></label>
+                <label class="top">Card CVV: <input type="text" name="cvv" required></label>
+                <label class="top">Billing Address: <input type="address" name="address" required></label>
+                </fieldset>
+        </form>
+    </main>
+    <footer><span>
+            &copy; <span id="year"></span> | Motor Scooter Rentals | Cozumel, Mexico | <a
+                href="https://www.scootcozumel.com" target="_blank">Scoots</a>
+        </span>
+        <br>
+        <span id="lastupdated"></span>
+    </footer>
+    <script src="js/file.js"></script>
 </body>
+
 </html>
