--- a/scoots/deposit.html
+++ b/scoots/deposit.html
@@ -37,6 +37,7 @@
                 you!
             </p>
         </div>
+        <br>
         <form>
             <h1 class="deposithead">Make Deposit and Complete Reservation</h1>
             <fieldset>
@@ -53,6 +54,7 @@
                 <label class="top">Card CVV: <input type="text" name="cvv" required></label>
                 <label class="top">Billing Address: <input type="address" name="address" required></label>
                 </fieldset>
+                <input type="submit" value="Pay Deposit/Make Reservation" class="submitBtn">
         </form>
     </main>
     <footer><span>
