--- a/scoots/home.html
+++ b/scoots/home.html
@@ -48,7 +48,7 @@
         </div>
         <br>
         <div class="reservebutton">
-            <a href='https://sommerl.github.io/scoots/rentals'><button>Click here to make a Reservation</button></a>
+            <a href='https://sommerl.github.io/scoots/reservation'><button>Click here to make a Reservation</button></a>
         </div>
         <br><br><br><br>
             <section class="weathersummary">
