--- a/scoots/reservation.html
+++ b/scoots/reservation.html
@@ -21,9 +21,9 @@
         <nav class="clearfix">
             <button onclick="toggleMenu()">&#9776; Menu</button>
             <ul id="mainNav">
-                <li class="active"><a href="https://sommerl.github.io/scoots/home">Home</a></li>
+                <li><a href="https://sommerl.github.io/scoots/home">Home</a></li>
                 <li><a href="https://sommerl.github.io/scoots/rentals">Rentals</a></li>
-                <li><a href="https://sommerl.github.io/scoots/reservation">Reservations</a></li>
+                <li class="active"><a href="https://sommerl.github.io/scoots/reservation">Reservations</a></li>
                 <li><a href="">Tours</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
