--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Rentals</title>
+    <title>Contact</title>
     <meta name="description" content="Scoots">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css">
@@ -22,25 +22,14 @@
             <button onclick="toggleMenu()">&#9776; Menu</button>
             <ul id="mainNav">
                 <li><a href="https://sommerl.github.io/scoots/home">Home</a></li>
-                <li class="active"><a href="https://sommerl.github.io/scoots/rentals">Rentals</a></li>
+                <li><a href="https://sommerl.github.io/scoots/rentals">Rentals</a></li>
                 <li><a href="https://sommerl.github.io/scoots/reservation">Reservations</a></li>
                 <li><a href="https://sommerl.github.io/scoots/tours">Tours</a></li>
-                <li><a href="https://sommerl.github.io/scoots/contact">Contact</a></li>
+                <li class="active"><a href="https://sommerl.github.io/scoots/contact">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <h2 class="welcome">Rentals</h2>
-        <div class="herodiv">
-            <img src="images/rentalsbanner.jpg" alt="banner img" class="rental-image">
-        </div>
-        <div class="rentaltype">
-            <h2>Types of Rentals</h2>
-        </div>
-        <div class="table"></div>
-        <div>
-            <img src="" alt="">
-        </div>
     </main>
     <footer>
         <span>
@@ -51,7 +40,7 @@
         <span id="lastupdated"></span>
     </footer>
     <script src="js/file.js"></script>
-    <script src="data/rentals.json"></script>
+    <script src="js/reservation.js>"></script>
 </body>
 
 </html>
