--- a/scoots/home.html
+++ b/scoots/home.html
@@ -24,8 +24,8 @@
                 <li class="active"><a href="https://sommerl.github.io/scoots/home">Home</a></li>
                 <li><a href="https://sommerl.github.io/scoots/rentals">Rentals</a></li>
                 <li><a href="https://sommerl.github.io/scoots/reservation">Reservations</a></li>
-                <li><a href="">Tours</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="https://sommerl.github.io/scoots/tours">Tours</a></li>
+                <li><a href="https://sommerl.github.io/scoots/contact">Contact</a></li>
             </ul>
         </nav>
     </header>
