--- a/scoots/deposit.html
+++ b/scoots/deposit.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Reservation</title>
+    <title>Deposit</title>
     <meta name="description" content="Scoots">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css">
@@ -24,8 +24,8 @@
                 <li class="active"><a href="https://sommerl.github.io/scoots/home">Home</a></li>
                 <li><a href="https://sommerl.github.io/scoots/rentals">Rentals</a></li>
                 <li><a href="https://sommerl.github.io/scoots/reservation">Reservations</a></li>
-                <li><a href="">Tours</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="https://sommerl.github.io/scoots/tours">Tours</a></li>
+                <li><a href="https://sommerl.github.io/scoots/contact">Contact</a></li>
             </ul>
         </nav>
     </header>
