--- a/scoots/tours.html
+++ b/scoots/tours.html
@@ -30,6 +30,56 @@
         </nav>
     </header>
     <main>
+        <h2>Tours</h2>
+        <div class="cozumelhistory">
+            <picture>
+                <img src="images/aboveisland.jpg" alt="aboveisland" class="aboveisland">
+            </picture>
+            <h3>The Island of Cozumel...</h3>
+            <p>Cozumel is an island located in the Caribbean Sea. It is 29 miles long and approximately 9 miles wide.
+                The island is also the biggest of the Mexico inhabited islands. The island is covered in lots of green,
+                as it is covered in vegetation making it a beautiful jungle. The island is surrounded by beautiful clear
+                ocean waters, where breath taking coral reefs and marine life are found. The easy access to water allows
+                for many water sports, fishing, and other fun activites at the beach. During the Mayan period, the
+                island was full of many different prehistory sites. When the time of the Spanish Coloniel era came
+                about, the population of the island of Cozumel was very minscule. During this time it is known that the
+                island was used primarly for trading between ships, and a place that pirates commonly went to find
+                shelter during storms and bad weather.</p>
+            <h3>Visit These Websites for More Information:</h3>
+        </div>
+        <div class="websites">
+            <div class="firsttour">
+                <h4><a href="https://www.cozumel-tours.com/" target="_blank">•Cozumel Tours•</a></h4>
+                <p>Cozumel Tours provides different tours offered around the island and allows you to schedule your tour
+                    ahead of time.</p>
+                <picture>
+                    <img src="images/tours1.jpg" alt="Tours1" class="tours-1">
+                </picture>
+            </div>
+            <br>
+            <br>
+            <div class="secondtour">
+                <h4><a href="http://everythingcozumel.com/" target="_blank">•Everything Cozumel•</a></h4>
+                <p>Everything Cozumel provides lots of great information on different special events occuring on the
+                    island
+                    throughout the week, places to eat, and much more!</p>
+                <picture>
+                    <img src="images/tours2.jpg" alt="Tours2" class="tours-2">
+                </picture>
+            </div>
+            <br>
+            <br>
+            <div class="thirdtour">
+                <h4><a href="https://thisiscozumel.com/" target="_blank">•This is Cozumel•</a></h4>
+                <p>This is Cozumel is a great source of information for anyone who is visiting Cozumel for their first
+                    time.
+                    They have lots of information on great ways to plan and spend your days, and can help to make your
+                    vacation run smoothly.</p>
+                <picture>
+                    <img src="images/tours3.jpg" alt="Tours3" class="tours-3">
+                </picture>
+            </div>
+        </div>
     </main>
     <footer>
         <span>
@@ -40,7 +90,6 @@
         <span id="lastupdated"></span>
     </footer>
     <script src="js/file.js"></script>
-    <script src="js/reservation.js>"></script>
 </body>
 
 </html>
