--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -30,6 +30,54 @@
         </nav>
     </header>
     <main>
+        <div class="rentalinfo">
+            <h2>Essential Rental Information</h2>
+            <p>Once your reservation is made, you should receive an email that contains any information you need
+                reguarding the reservation you made. There is also contact information and location directions included.
+                This information is also included below for convenience.</p>
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="contactinfo">
+            <div class="info">
+                <h2>Contact Information:</h2>
+                <p>Phone: (343) 786-9087</p>
+                <p>Email: scootcozumel@gmail.com</p>
+                <p>Address: San Miguel de Cozumel, Quintana Roo, Mexico</p>
+            </div>
+            <div class="map1">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3736.8592003811814!2d-86.952967684908!3d20.511997386280584!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4e59cf3a0ece15%3A0x9216e3c2b55e5526!2sPlaya%20del%20Carmen-Cozumel%20Ferry%20Dock!5e0!3m2!1sen!2sus!4v1608155174627!5m2!1sen!2sus"
+                    class="location1" width="400" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+                    tabindex="0"></iframe>
+            </div>
+            <div class="map2">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3737.741153757171!2d-86.9769506849086!3d20.475821986300506!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4e5748bac98d29%3A0xec697a2a774f7a00!2sPuerta%20Maya%20Cruise%20Ship%20Terminal!5e0!3m2!1sen!2sus!4v1608155297571!5m2!1sen!2sus"
+                    class="location2" width="400" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+                    tabindex="0"></iframe>
+            </div>
+        </div>
+        <form class="contactform"> 
+            <h1 class="reservehead">Contact Us</h1>
+            <fieldset>
+                <legend>Contact Information</legend>
+                <label class="top">Phone* <input type="tel" name="phone" placeholder="1235551234" required></label>
+                <label class="top">First Name* <input type="text" name="fname" required></label>
+                <label class="top">Last Name* <input type="text" name="lname" required></label>
+                <label class="top">Email* <input type="email" name="email" placeholder="someone@gmail.com"
+                        required></label>
+            </fieldset>
+            <fieldset>
+                <legend>Additional Information/Comments</legend>
+                <p>*special accommodations/comments such as the need and location of drop-off request*</p>
+                <label><textarea id="infocomments" name="infocomments" placeholder=" Type here..." rows="5" cols="50"></textarea></label>
+            </fieldset>
+            <input type="submit" value="Send Message" class="submitBtn">
+        </form>
     </main>
     <footer>
         <span>
