--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -48,18 +48,19 @@
                 <p>Email: scootcozumel@gmail.com</p>
                 <p>Address: San Miguel de Cozumel, Quintana Roo, Mexico</p>
             </div>
-            <div class="map1">
+            <div class="map-responsive">
+                <h3>Locations:</h3>
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3736.8592003811814!2d-86.952967684908!3d20.511997386280584!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4e59cf3a0ece15%3A0x9216e3c2b55e5526!2sPlaya%20del%20Carmen-Cozumel%20Ferry%20Dock!5e0!3m2!1sen!2sus!4v1608155174627!5m2!1sen!2sus"
                     class="location1" width="400" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
                     tabindex="0"></iframe>
-            </div>
-            <div class="map2">
+                    <br>
+                    <br>
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3737.741153757171!2d-86.9769506849086!3d20.475821986300506!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4e5748bac98d29%3A0xec697a2a774f7a00!2sPuerta%20Maya%20Cruise%20Ship%20Terminal!5e0!3m2!1sen!2sus!4v1608155297571!5m2!1sen!2sus"
                     class="location2" width="400" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
                     tabindex="0"></iframe>
-            </div>
+                </div>
         </div>
         <form class="contactform"> 
             <h1 class="reservehead">Contact Us</h1>
